--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     },
     "dependencies": {
         "mysql": ">1.0.0",
+        "request": "2.21.0",
+        "mongodb": "1.3.9",
         "neo4j": ">0.2.0"
     }
 }
